--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!--komment-->
+<!---->
+<!DOCTYPE html> <!--HTML5 nyelv-->
+<html lang="hu"> <!--Az egész weboldal, ebben a tag-ben íródik és itt állítható be a nyelv-->
+<head> <!--A böngészőnek ad utasításokat-->
+    <meta charset="UTF-8"> <!--Karakterkódolás beállítása-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- kijelzőn optimális lesz a felbontás-->
+    <link rel="stylesheet" href="css/style.css"> <!--külső (External) stíluslap csatolása a html fájlhoz-->
+    <title>Document</title> <!--A böngésző címsorában megjelenő nlv-->
+    <style> 
+        h1{
+            color:brown;
+        }
+    </style> <!--Belső (internal) stíllusbeállítás-->
+</head>
+<body> 
+    <h1 style="color:purple;"></h1> <!--Címsor, 1-es szintű, tag-hez írt inline (főcím)  -->
+    <h2></h2>-<h6></h6>
+    <p></p> <!--Bekezdések létrehozása-->
+    <img src="" alt=""> <!--Kép létrehozása-->
+</body> <!--A felhasználónak ad  információt-->
+</html>
