--- a/index.html
+++ b/index.html
@@ -17,6 +17,31 @@
     <h1 style="color:purple;"></h1> <!--Címsor, 1-es szintű, tag-hez írt inline (főcím)  -->
     <h2></h2>-<h6></h6>
     <p></p> <!--Bekezdések létrehozása-->
-    <img src="" alt=""> <!--Kép létrehozása-->
-</body> <!--A felhasználónak ad  információt-->
+    <img src="" alt="" title=""> <!--Kkép beillesztése, src:forrásválasztó 1. img/kep.jpg; 2.egy link,alt:ha nem jelenik meg a kép; tile: ha a kép felé viszem akkor kiírja a beírt dolgot-->
+    <a href="https://...." target="_blank">LINK</a><!--Link, mely új oldalon nyílik meg-->
+    <a href="cica.html">SAJÁT OLDALRA NAVIGÁL</a><!---->
+    <a href="#leiras">UGRÓ PONT</a>
+    <br> <!--sortörés-->
+    <hr> <!--vízszintes vonal-->
+<ul>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>   
+</ul> <!--számozatlan felsorolás emmet: 5 elemből álló lista (ul>li*5)-->
+<ol>
+    <li></li>
+    <li></li>
+</ol> <!--Számozott felsorolás-->
+<ul class="cica" id="kutya">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    </ul>     <!--emmet:ul.cica#kutya>li*5-->
+
+
+    </body> <!--A felhasználónak ad  információt--> 
 </html>
