--- a/index.html
+++ b/index.html
@@ -42,6 +42,41 @@
     <li></li>
     </ul>     <!--emmet:ul.cica#kutya>li*5-->
 
+<!--Táblázat-->
+<table>
+<thead>
+    <tr>
+        <th></th> <!--fejléc cella-->
+    </tr> <!--Táblázat sora-->
+</thead> <!--fejléc-->
+    <tbody>
+      <tr>
+          <td></td> <!--adat cella-->
+      </tr>  
+    </tbody> <!--táblázat törzse-->
 
+    <tfoot>
+        
+    </tfoot> <!--lábléc-->
+table>tr*4>td*2
+    <table>
+      <tr>
+    <td></td>
+    <td></td>
+      </tr>
+     <tr>
+    <td></td>
+    <td></td>
+     </tr>
+     <tr>
+    <td></td>
+    <td></td>
+     </tr>
+     <tr>
+    <td></td>
+    <td></td>
+     </tr>    
+    </table>
+</table>
     </body> <!--A felhasználónak ad  információt--> 
 </html>
