--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 <!--Táblázat-->
 <table>
+    <caption>Táblázat címe</caption>
 <thead>
     <tr>
         <th></th> <!--fejléc cella-->
@@ -78,5 +79,11 @@ table>tr*4>td*2
      </tr>    
     </table>
 </table>
+    <table>
+        <thead>
+        <tr rowspan="2"><Összevont </tr>
+            </thead>
+        <td></td>
+    </table>
     </body> <!--A felhasználónak ad  információt--> 
 </html>
