--- a/index.html
+++ b/index.html
@@ -85,5 +85,11 @@ table>tr*4>td*2
             </thead>
         <td></td>
     </table>
+    <div></div> <!--keret-->
+    <b></b> vagy  <strong></strong> <!--félkövér betűs szöveg-->
+    <i></i> vagy <em></em> <!--dől betű szöveg -->
+    <u></u> <!--aláhúzott-->
+    <span></span> vagy  <mark></mark> <!--egyedileg formázott szövegnél alkalmazzuk-->
+    
     </body> <!--A felhasználónak ad  információt--> 
 </html>
