--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--komment-->
+ll<!--komment-->
 <!---->
 <!DOCTYPE html> <!--HTML5 nyelv-->
 <html lang="hu"> <!--Az egész weboldal, ebben a tag-ben íródik és itt állítható be a nyelv-->
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- kijelzőn optimális lesz a felbontás-->
     <link rel="stylesheet" href="css/style.css"> <!--külső (External) stíluslap csatolása a html fájlhoz-->
     <title>Document</title> <!--A böngésző címsorában megjelenő nlv-->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  <!--favicon-->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  <!--favicon beillesztése-->
     <style> 
         h1{
             color:brown;
